# juce-template

./: .gitignore  CMakeLists.txt  README.md
include/: PluginEditor.h
src/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
